--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav {
 ::placeholder {
   padding-left: 10px;
 }
-#serch-icon {
+#search-icon {
   height: 2.5rem;
   width: 4.3rem;
   border-top-right-radius: 20px;
@@ -194,6 +194,12 @@ nav {
   padding-top: 1rem;
   gap: 7px;
 }
+.quick-link{cursor: pointer;}
+
+.quick-link.active {
+  background-color: white;
+  color: black;
+}
 
 .views {
   display: flex;
@@ -218,7 +224,7 @@ nav {
     background-color: var(--background-color);
     border: none;
   }
-  #serch-icon {
+  #search-icon {
     border: none;
     background-color: var(--background-color);
   }
